# doc-ai-editor

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.js  Chat.js
tests/: test_main.py
