[tool.poetry]
name = "doc-ai-editor"
version = "0.1.0"
description = ""
authors = ["Brais Maneiro Sánchez <brais.maneiro@netexlearning.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
langchain = "^0.3.4"
openai = "^1.52.0"
pydantic = "^2.9.2"
langchain-community = "^0.3.3"
langchain-openai = "^0.2.3"
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.12.1"
python-socketio = {extras = ["asyncio"], version = "^5.11.4"}
aiohttp = "^3.10.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
